more responsive coding also fixed the overflow hidden thing

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html{
     font-size: 10px;
+    overflow: hidden;
 }
 
 body{
@@ -14,11 +15,11 @@ body{
     font-family: 'Katibeh', cursive;
 
     font-weight: 200;
-    /* font-size: 16px; */
     line-height: 2;
     color: #707070;
+    position: relative;
     overflow: hidden;
-}
+    }
 
 p::selection{
     background: #ffb7b7;
@@ -104,7 +105,8 @@ p::selection{
     padding-top: 1%;
     font-size: 1.8rem;
     color: #707070;
-    /* z-index: 100; */
+    z-index: 103;
+    
 }
 
 .project-intro{
@@ -259,6 +261,7 @@ button{
         right: 0;
         margin-top: 26%;
         padding-right: 9.5%;
+        z-index: 102;
     }
 
     .btn-tab{
